# converge

./: .gitignore  Cargo.toml  flake.nix  toolchain.toml
clippy/: CaptureEngine.swift  CapturePreview.swift  ContentView.swift  Item.swift  ScreenCapture.swift  ScreenRecorder.swift  clippyApp.swift  main.swift
clippy-app/: bun.lockb
clippy-app/src/: App.tsx  styles.css  use_global_shortcut.tsx
clippy-app/src-tauri/: Cargo.toml  tauri.conf.json
clippy-app/src-tauri/src/: main.rs  main_window.rs
clippy-lib/: Package.swift
clippy-lib/Sources/: CaptureEngine.swift  ContentView.swift  ScreenRecorder.swift  main.swift
clippy.xcodeproj/: project.pbxproj
intero/: .gitignore  bun.lockb  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts  widget.html
intero/src/: ActivityPicker.tsx  App.css  App.tsx  Box.tsx  Canvas.tsx  CommandLine.tsx  CustomEdge.tsx  CustomNode.tsx  ErrorBoundary.tsx  GlassWindow.tsx  SearchBox.tsx  Selection.tsx  SelectionPane.tsx  ToposorterState.tsx  WidgetView.css  WidgetView.tsx  XEyes.tsx  action_manager.tsx  activity.tsx  activity_state.ts  canvas_controller.tsx  cozo.tsx  custom_node.module.css  main.tsx  preference_state.tsx  screen_watcher.tsx  state.ts  styles.css  ui_state.tsx  use_global_shortcut.tsx  widget.tsx
intero/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
intero/src-tauri/src/: ffi.rs  lib.rs  main.rs  main_window.rs  panel_ext.rs  screenshot.rs  widget.rs  window_ext.rs
recorder/: Package.swift
tauri-nspanel/src/: raw_nspanel.rs
(+16 files in other folders)
