[package]
name = "clippy-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = [ "fs-create-dir", "path-all", "fs-write-file", "dialog-all", "global-shortcut-all", "window-all", "system-tray", "macos-private-api", "shell-open"] }
tauri-nspanel = { git = "https://github.com/sleexyz/tauri-nspanel", rev = "aa9218e4c26d75c293847c2549056f1fbd30a0cc" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-persisted-scope = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
window-vibrancy = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
raw-window-handle = "0.5"
cocoa = "0.25.0"
objc = "0.2.7"
objc_id = {version = "0.1.1" }
objc-foundation = { version = "0.1.1" }
log = "0.4.20"
block = "0.1.6"
image = "0.24.8"
xcap = "0.0.3"



[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
